# project

./: .gitignore  Cargo.toml  package-lock.json  package.json  readme.md  roadmap.md
client/: Cargo.toml  index.html  index.js  tsconfig.json
client/src/: canvas.rs  context2d.rs  face.rs  index.ts  lib.rs  log.rs  websocket.rs
client/src/context2d/: command.rs  draw.rs  mod.rs
docs/: ideas.md  roadmap.md
game/: Cargo.toml
game/src/: lib.rs
server/: Cargo.toml  index.js  player.js  tsconfig.json
server/src/: index.ts  main.rs  player.ts
server/static/: index.html
