[package]
name = "client"
version = "0.1.0"
authors = ["Kinrany <kinrany@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "../game" }
wasm-bindgen = "0.2.47"

[dev-dependencies]
wasm-pack = "0.8.1"

[lib]
crate-type = ["cdylib", "rlib"]
