[package]
name = "client"
version = "0.1.0"
authors = ["Kinrany <kinrany@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "../game" }
wasm-bindgen = "0.2.47"
js-sys = "0.3.25"

[dependencies.web-sys]
version = "0.3.25"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'ErrorEvent',
  'HtmlCanvasElement',
  'HtmlElement',
  'MessageEvent',
  'WebSocket',
  'Window',
]

[dev-dependencies]
wasm-pack = "0.8.1"

[lib]
crate-type = ["cdylib", "rlib"]
